<resources>
    <string name="app_name">Наш приход - Админ</string>
    <string name="notify_chanel_nash_prihod">Уведомления о событиях в приложении</string>
    <string name="your_email">Ваш email</string>
    <string name="password">Пароль</string>
    <string name="forgot_password_question">Забыли пароль?</string>
    <string name="app_for_admins">Приложение для администраторов</string>
    <string name="enter">Войти</string>
    <string name="register">Регистрация</string>
    <string name="moscow_adres">Москва, Благовещенский переулок, дом 1А</string>
    <string name="church_nevskiy">Храм святого благоверного князя\nAлександра Невского</string>
    <string name="name">Имя</string>
    <string name="last_name">Фамилия</string>
    <string name="repeat_password">Повторите пароль</string>
    <string name="already_has_account">Уже есть аккаунт?</string>

    <string name="no_internet_error">Отсутсвует соединение с сетью</string>
    <string name="default_error">Возникла ошибка при выполнении запроса. Повторите позже.</string>
    <string name="parsing_error">Возникла ошибка при обработке запроса.</string>
    <string name="for_full_work_need_permissions">Для полноценной работы приложения необходимо предоставить разрешения</string>
    <string name="permissions">Разрешения</string>
    <string name="need_permissions_geo">" Для поиска по карте необходимо предоставить доступ к геолокации"</string>
    <string name="need_permissions_global">Для полноценной рабоы приложения необходимо предоставить разрешения</string>
    <string name="ok">Ок</string>
    <string name="cancel">Отмена</string>
    <string name="try_again">Try again</string>
    <string name="later">Later</string>
    <string name="to_settings">Настройки</string>
    <string name="gallery">Галлерея</string>
    <string name="camera">Камера</string>
    <string name="save">Сохранить</string>
    <string name="loading">Загрузка</string>
    <string name="please_fill">Пожалуйста заполните поле \'%1$s\'</string>
    <string name="enter_valid_email">Введите корректный email</string>
    <string name="congrats_register_made">Поздравляем вы зарегистрированы в приложении \'Наш приход\'. Вы сможете войти после одобрения от администратора</string>
    <string name="password_recover">Восстановление пароля</string>
    <string name="for_password_recover">Для восстановления пароля введите ваш email. На него придет письмо с инструкцией по восстановлению.</string>
    <string name="recover">Восстановить</string>
    <string name="news">Новости</string>
    <string name="timetable">Расписание</string>
    <string name="visitors">Прихожане</string>
    <string name="notes">Записки</string>
    <string name="profile">Профиль</string>
    <string name="news_single">Новость</string>
    <string name="name_nazvanie">Название</string>
    <string name="text">Текст</string>
    <string name="type">Тип</string>
    <string name="preaching">Проповедь</string>
    <string name="event">Событие</string>
    <string name="media">Медиа</string>
    <string name="error_on_getting_file">Ошибка при получении файла</string>
    <string name="delete_media">Удалить медиа</string>
    <string name="select_video">Выбрать видео</string>
    <string name="make_video">Снять видео</string>
    <string name="select_photo">Выбрать фото</string>
    <string name="make_photo">Снять фото</string>
    <string name="create">Создать</string>
    <string name="delete">Удалить</string>
    <string name="deleting">Удаление</string>
    <string name="delete_this_media_file">Удалить данный медиа файл?</string>
    <string name="notice">Объявление</string>
    <string name="title">Заглавие</string>
    <string name="content">Текст</string>
    <string name="add_service_text">Добавить</string>

    <string name="time">Время</string>
    <string name="time_title">Время</string>
    <string name="service_title">Служба</string>
    <string name="add_time">9:00</string>
    <string name="add_service_title">Водосвятный молебен.</string>
    <string name="phone_number">+7 925 406 66 70</string>
    <string name="phone">Телефон</string>
    <string name="tell_about_yourself">Расскажите что - нибудь о себе</string>
    <string name="edit">Редактировать</string>
    <string name="exit">Выйти</string>
    <string name="email_value">vas2011@ya.ru</string>
    <string name="email">Email</string>
    <string name="nameday_date">14 января</string>
    <string name="nameday">Именины</string>
    <string name="birthday_value">17 ноября 1970</string>
    <string name="birthday">День рождения</string>
    <string name="user_name">Ляшенко Василий</string>

    <string name="notices">Объявления</string>
    <string name="watching">Просмотр</string>
    <string name="editing">Редактирование</string>
    <string name="filter">Фильтр</string>
    <string name="search">Поиск</string>
    <string name="all">Все</string>
    <string name="actives">Активные</string>
    <string name="waits_approve">Ожидают одобрения</string>
    <string name="blocked">Заблокированные</string>
    <string name="status">Статус</string>
    <string name="apply">Применить</string>
    <string name="register_date">Дата регистрации</string>
    <string name="about_me">Обо мне</string>
    <string name="plus">+</string>
    <string name="holiday">Праздник</string>
    <string name="holiday_title">Неделя 24-я по Пятидесятнице</string>
    <string name="service_text">Текст службы</string>
    <string name="select">Выбрать</string>
    <string name="select_time">Выберите время</string>
    <string name="date">Дата</string>
    <string name="block">Заблокировать</string>
    <string name="unblock">Разблокировать</string>
    <string name="approve">Одобрить</string>
    <string name="for_health">О здравии</string>
    <string name="for_peace">Об упокоении</string>
    <string name="put">Подать</string>
    <string name="donation">Пожертвование</string>
    <string name="readed">Прочитано</string>
    <string name="letter_from_nash_prihod_app">Письмо из приложения Наш приход</string>
    <string name="make_active">Одобрить</string>
    <string name="waits_for_reading">Ожидает прочтения</string>
    <string name="is_reading">Читается</string>
    <string name="reads">Читает</string>
    <string name="have_readed">Прочитана</string>
    <string name="readed_by">Прочитал</string>
    <string name="exiting">Выход</string>
    <string name="exit_your_accaunt">Выйти из аккаунта?</string>
    <string name="close">Закрыть</string>
    <string name="delete_this_notice">Удалить данное объявление?</string>
    <string name="delete_this_news">Удалить данную новость?</string>

</resources>