<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <import type="com.dimfcompany.nashprihodadmin.logic.utils.builders.BuilderBg" />

        <import type="com.dimfcompany.nashprihodadmin.R" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black_trans_50">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="16dp"
            android:background="@{BuilderBg.getSimpleDrawable(10f, BuilderBg.gc(R.color.white))}"
            android:orientation="vertical">

            <TextView
                style="@style/TvBold.L"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="22dp"
                android:layout_marginRight="16dp"
                android:text="@string/filter"
                android:textColor="@color/gray7" />

            <TextView
                style="@style/TvBold.M"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="22dp"
                android:layout_marginRight="16dp"
                android:gravity="left"
                android:text="@string/search"
                android:textColor="@color/gray5" />

            <EditText
                android:id="@+id/et_search"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="16dp"
                android:background="@{BuilderBg.getStrokedEt()}" />

            <TextView
                style="@style/TvReg.L"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="12dp"
                android:layout_marginRight="16dp"
                android:gravity="left"
                android:text="@string/status"
                android:textColor="@color/gray5" />

            <RadioGroup
                android:id="@+id/rg_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="4dp"
                android:layout_marginRight="16dp"
                android:checkedButton="@id/rb_status_all"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/rb_status_all"
                    style="@style/Radio.Blue"
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:text="@string/all" />

                <RadioButton
                    android:id="@+id/rb_status_active"
                    style="@style/Radio.Blue"
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:text="@string/actives" />

                <RadioButton
                    android:id="@+id/rb_status_wait_admin_aprove"
                    style="@style/Radio.Blue"
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:text="@string/waits_approve" />

                <RadioButton
                    android:id="@+id/rb_status_blocked"
                    style="@style/Radio.Blue"
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:text="@string/blocked" />

            </RadioGroup>

            <TextView
                style="@style/TvReg.L"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="12dp"
                android:layout_marginRight="16dp"
                android:gravity="left"
                android:text="@string/status"
                android:textColor="@color/gray5" />

            <RadioGroup
                android:id="@+id/rg_sort"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="4dp"
                android:layout_marginRight="16dp"
                android:checkedButton="@id/rb_by_name"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/rb_by_name"
                    style="@style/Radio.Blue"
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:text="@string/name" />

                <RadioButton
                    android:id="@+id/rb_by_status"
                    style="@style/Radio.Blue"
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:text="@string/status" />

                <RadioButton
                    android:id="@+id/rb_by_register_date"
                    style="@style/Radio.Blue"
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:text="@string/register_date" />

            </RadioGroup>

            <TextView
                android:id="@+id/tv_apply"
                style="@style/TvBold.M"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="22dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="22dp"
                android:background="@{BuilderBg.getSimpleDrawableRipple(4f,BuilderBg.gc(R.color.blue),BuilderBg.gc(R.color.blue_dark))}"
                android:elevation="12dp"
                android:text="@string/apply"
                android:textColor="@color/white" />

        </LinearLayout>

    </RelativeLayout>

</layout>