<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <import type="com.dimfcompany.nashprihodadmin.logic.utils.builders.BuilderBg" />

        <import type="com.dimfcompany.nashprihodadmin.R" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipChildren="false"
        android:clipToPadding="false">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:src="@drawable/img_bg" />

        <include
            android:id="@+id/cv_avatar"
            layout="@layout/cv_circle_image"
            android:layout_width="112dp"
            android:layout_height="112dp"
            android:layout_above="@id/lal_for_ets"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="40dp" />

        <LinearLayout
            android:id="@+id/lal_for_ets"
            my_divider_color="@{R.color.transparent}"
            my_divider_size="@{10f}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:showDividers="middle">

            <EditText
                android:id="@+id/et_first_name"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:background="@{BuilderBg.getSimpleDrawable(999f,BuilderBg.gc(R.color.white))}"
                android:elevation="12dp"
                android:hint="@string/name"
                android:paddingLeft="20dp"
                android:paddingRight="20dp" />

            <EditText
                android:id="@+id/et_last_name"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:background="@{BuilderBg.getSimpleDrawable(999f,BuilderBg.gc(R.color.white))}"
                android:elevation="12dp"
                android:hint="@string/last_name"
                android:paddingLeft="20dp"
                android:paddingRight="20dp" />

            <EditText
                android:id="@+id/et_email"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:background="@{BuilderBg.getSimpleDrawable(999f,BuilderBg.gc(R.color.white))}"
                android:elevation="12dp"
                android:hint="@string/your_email"
                android:inputType="textEmailAddress"
                android:paddingLeft="20dp"
                android:paddingRight="20dp" />

            <EditText
                android:id="@+id/et_password1"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:background="@{BuilderBg.getSimpleDrawable(999f,BuilderBg.gc(R.color.white))}"
                android:elevation="12dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingLeft="20dp"
                android:paddingRight="20dp" />

            <EditText
                android:id="@+id/et_password2"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:background="@{BuilderBg.getSimpleDrawable(999f,BuilderBg.gc(R.color.white))}"
                android:elevation="12dp"
                android:hint="@string/repeat_password"
                android:inputType="textPassword"
                android:paddingLeft="20dp"
                android:paddingRight="20dp" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_register"
            style="@style/TvBold.L"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_below="@id/lal_for_ets"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="40dp"
            android:background="@{BuilderBg.getSimpleDrawableRipple(999f,BuilderBg.gc(R.color.blue),BuilderBg.gc(R.color.blue_dark))}"
            android:elevation="12dp"
            android:text="@string/register"
            android:textColor="@color/white" />

        <LinearLayout
            android:id="@+id/lal_bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="12dp"
            android:orientation="horizontal">

            <TextView
                style="@style/TvReg.M"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_has_account"
                android:textColor="@color/gray5" />

            <TextView
                android:id="@+id/tv_login"
                style="@style/TvBold.M"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:text="@string/enter"
                android:textColor="@color/blue" />

        </LinearLayout>

    </RelativeLayout>

</layout>