<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <import type="com.dimfcompany.nashprihodadmin.logic.utils.builders.BuilderBg" />

        <import type="com.dimfcompany.nashprihodadmin.R" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipChildren="false"
        android:clipToPadding="false">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:src="@drawable/img_bg" />

        <ImageView
            android:layout_width="132dp"
            android:layout_height="132dp"
            android:layout_above="@id/tv_for_admins"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="24dp"
            android:scaleType="fitCenter"
            android:src="@drawable/img_cross" />

        <TextView
            android:id="@+id/tv_for_admins"
            style="@style/TvReg.L"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/lal_for_ets"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="40dp"
            android:text="@string/app_for_admins"
            android:textColor="@color/gray6" />

        <LinearLayout
            android:id="@+id/lal_for_ets"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_email"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:background="@{BuilderBg.getSimpleDrawable(999f,BuilderBg.gc(R.color.white))}"
                android:elevation="12dp"
                android:hint="@string/your_email"
                android:inputType="textEmailAddress"
                android:paddingLeft="20dp"
                android:paddingRight="20dp" />

            <EditText
                android:id="@+id/et_password"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_marginTop="16dp"
                android:background="@{BuilderBg.getSimpleDrawable(999f,BuilderBg.gc(R.color.white))}"
                android:elevation="12dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingLeft="20dp"
                android:paddingRight="20dp" />

            <TextView
                android:id="@+id/tv_forgot_pass"
                style="@style/TvReg.M"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="16dp"
                android:background="@{BuilderBg.getSimpleDrawableRipple(999f,BuilderBg.gc(R.color.transparent),BuilderBg.gc(R.color.gray4))}"
                android:paddingLeft="12dp"
                android:paddingTop="6dp"
                android:paddingRight="12dp"
                android:paddingBottom="6dp"
                android:text="@string/forgot_password_question"
                android:textColor="@color/gray5" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_enter"
            style="@style/TvBold.L"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_below="@id/lal_for_ets"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="24dp"
            android:layout_marginRight="40dp"
            android:background="@{BuilderBg.getSimpleDrawableRipple(999f,BuilderBg.gc(R.color.blue),BuilderBg.gc(R.color.blue_dark))}"
            android:elevation="12dp"
            android:text="@string/enter"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tv_register"
            style="@style/TvBold.M"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_enter"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="12dp"
            android:background="@{BuilderBg.getSimpleDrawableRipple(999f,BuilderBg.gc(R.color.transparent),BuilderBg.gc(R.color.blue_trans_50))}"
            android:paddingLeft="16dp"
            android:paddingTop="8dp"
            android:paddingRight="16dp"
            android:paddingBottom="8dp"
            android:text="@string/register"
            android:textColor="@color/blue" />

        <TextView
            style="@style/TvReg.S"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/tv_address"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:text="@string/church_nevskiy"
            android:textColor="@color/gray5" />

        <TextView
            android:id="@+id/tv_address"
            style="@style/TvReg.S"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="24dp"
            android:text="@string/moscow_adres"
            android:textColor="@color/blue" />

    </RelativeLayout>

</layout>